fix: icon button fix

--- a/button/button.html
+++ b/button/button.html
@@ -35,16 +35,16 @@
     <br />
 
     <!-- icon buttons -->
-    <button class="m-2 font-semibold p-1 rounded-sm transition-3">
-        <i class="fa fa-clone btn-icon"></i>
+    <button class="m-2 btn-primary py-1 px-2 font-semibold rounded-sm flex-row items-center transition-3">
+        <i class="fa fa-thumbs-o-up btn-icon mr-1"></i>Like
     </button>
 
-    <button class="m-2 font-semibold p-1 rounded-sm transition-3">
-        <i class="fa fa-thumbs-o-up btn-icon"></i>
+    <button class="m-2 btn-ternary py-1 px-2 font-semibold rounded-sm flex-row items-center transition-3">
+        <i class="fa fa-clone btn-icon mr-1"></i>Copy
     </button>
 
-    <button class="m-2 font-semibold p-1 rounded-sm transition-3">
-        <i class="fa fa-shopping-cart btn-icon"></i>
+    <button class="m-2 btn-ternary py-1 px-2 font-semibold rounded-sm flex-row items-center transition-3">
+        <i class="fa fa-shopping-cart btn-icon mr-1"></i> Add to cart
     </button>
 
     <!-- float button -->
