fix: button name

--- a/button/button.html
+++ b/button/button.html
@@ -19,7 +19,7 @@
         Show more
     </button>
 
-    <button class="btn-ternary m-2 font-semibold py-1 px-3 rounded-sm transition-3">
+    <button class="btn-tertiary m-2 font-semibold py-1 px-3 rounded-sm transition-3">
         Show more
     </button>
 
@@ -38,11 +38,11 @@
         <i class="fa fa-thumbs-o-up btn-icon mr-1"></i>Like
     </button>
 
-    <button class="m-2 btn-ternary py-1 px-2 font-semibold rounded-sm flex-row items-center transition-3">
+    <button class="m-2 btn-tertiary py-1 px-2 font-semibold rounded-sm flex-row items-center transition-3">
         <i class="fa fa-clone btn-icon mr-1"></i>Copy
     </button>
 
-    <button class="m-2 btn-ternary py-1 px-2 font-semibold rounded-sm flex-row items-center transition-3">
+    <button class="m-2 btn-tertiary py-1 px-2 font-semibold rounded-sm flex-row items-center transition-3">
         <i class="fa fa-shopping-cart btn-icon mr-1"></i> Add to cart
     </button>
 
