--- a/index.html
+++ b/index.html
@@ -2,20 +2,25 @@
 <html lang="en">
 
 <head>
+    <!-- meta tags -->
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta name="author" content="Rohan Mathur" />
+    <meta name="description" content="Polaroid a CSS component library for your awesome UI." />
+
+    <!-- links -->
     <link rel="stylesheet" href="/documentation/documentation.css" />
     <title>⚒ Polaroid | Home</title>
 </head>
 
 <body>
     <header class="header spacing flex-row items-center wrap py-2 px-8 sticky top-0 z-1 w-100">
-        <a href="home.html">
+        <a href=" ../index.html">
             <h3>Polaroid</h3>
         </a>
         <ul class="lists flex-row items-center font-bold">
-            <li class="mr-2 list-item"><a class="link" href="home.html">Home</a></li>
+            <li class="mr-2 list-item"><a class="link" href="./documentation/documentation.html">Documentation</a></li>
             <li class="mr-2 list-item"><a class="link" href="https://twitter.com/@rohanmathur91"
                     target="_blank">Twitter</a></li>
         </ul>
@@ -28,7 +33,8 @@
                 <h3>Build fast and elegant user interfaces.</h3>
                 <h3>Polaroid a component library for faster development.</h3>
                 <div class="mt-4 p-1">
-                    <a class="cta mt-1 py-1 px-2 mr-1 rounded-sm cta__primary" href="index.html">Get started</a>
+                    <a class="cta mt-1 py-1 px-2 mr-1 rounded-sm cta__primary"
+                        href="./documentation/documentation.html">Get started</a>
                     <a class="cta mt-1 py-1 px-2 rounded-sm cta__secondary"
                         href="https://github.com/rohanmathur91/css-component-library" target="_blank">Github</a>
                 </div>
