feat: add installation guide

--- a/index.html
+++ b/index.html
@@ -15,16 +15,15 @@
 </head>
 
 <body>
-    <header class="header spacing flex-row items-center wrap py-2 px-8 sticky top-0 z-1 w-100">
+    <nav class="navigation spacing flex-row items-center wrap py-2 px-8 sticky top-0 z-1 w-100">
         <a href=" ../index.html">
             <h3>Polaroid</h3>
         </a>
         <ul class="lists flex-row items-center font-bold">
-            <li class="mr-2 list-item"><a class="link" href="./documentation/documentation.html">Documentation</a></li>
-            <li class="mr-2 list-item"><a class="link" href="https://twitter.com/@rohanmathur91"
-                    target="_blank">Twitter</a></li>
+            <li class="mr-2"><a class="link" href="./documentation/documentation.html">Documentation</a></li>
+            <li class="mr-2"><a class="link" href="https://twitter.com/@rohanmathur91" target="_blank">Twitter</a></li>
         </ul>
-    </header>
+    </nav>
 
     <main class="home">
         <section class="spacing flex-row flex-center h-screen-80 w-screen-100 m-auto">
