--- a/documentation/documentation.html
+++ b/documentation/documentation.html
@@ -11,39 +11,87 @@
 
     <!-- links -->
     <link rel="stylesheet" href="documentation.css" />
-    <title>Polaroid | Get Started!</title>
+    <title>⚒ Polaroid | Get Started!</title>
 </head>
 
 <body>
     <div class="container">
-        <header class="header spacing flex-row items-center wrap py-2 px-8 sticky top-0 z-1 w-100">
+        <nav class="navigation spacing flex-row items-center wrap py-2 px-8 sticky top-0 z-1 w-100">
             <a href="../index.html">
                 <h3>Polaroid</h3>
             </a>
             <ul class="lists flex-row items-center font-bold">
-                <li class="mr-2 list-item"><a class="link" href="documentation.html">Documentation</a></li>
-                <li class="mr-2 list-item"><a class="link" href="https://twitter.com/@rohanmathur91"
-                        target="_blank">Twitter</a></li>
+                <li class="mr-2">
+                    <a class="link" href="documentation.html">Documentation</a>
+                </li>
+                <li class="mr-2">
+                    <a class="link" href="https://twitter.com/@rohanmathur91" target="_blank">Twitter</a>
+                </li>
             </ul>
-        </header>
-        <aside class="component-list">
-            <ul>
-                <li><a href="#">Avatar</a></li>
-                <li><a href="#">Alert</a></li>
-                <li><a href="#">Badge</a></li>
-                <li><a href="#">Button</a></li>
-                <li><a href="#">Card</a></li>
-                <li><a href="#">Images</a></li>
-                <li><a href="#">Input</a></li>
-                <li><a href="#">List</a></li>
-                <li><a href="#">Modal</a></li>
-                <li><a href="#">Rating </a></li>
-                <li><a href="#">Toast/Notify/Snackbar</a></li>
-                <li><a href="#">Grids</a></li>
+        </nav>
+        <aside class="sidebar">
+            <ul class="mt-3">
+                <li class="py-1 px-2 m-1 ml-6 list-item">
+                    <a href="#usage">Get started!</a>
+                </li>
+                <li class="py-1 px-2 m-1 ml-6 list-item"><a href="#">Alert</a></li>
+                <li class="py-1 px-2 m-1 ml-6 list-item"><a href="#">Dummy</a></li>
+                <li class="py-1 px-2 m-1 ml-6 list-item"><a href="#">Dummy</a></li>
+                <li class="py-1 px-2 m-1 ml-6 list-item"><a href="#">Dummy</a></li>
+                <li class="py-1 px-2 m-1 ml-6 list-item"><a href="#">Dummy</a></li>
+                <li class="py-1 px-2 m-1 ml-6 list-item"><a href="#">Dummy</a></li>
+                <li class="py-1 px-2 m-1 ml-6 list-item"><a href="#">Dummy</a></li>
+                <li class="py-1 px-2 m-1 ml-6 list-item"><a href="#">Dummy</a></li>
+                <li class="py-1 px-2 m-1 ml-6 list-item"><a href="#">Dummy</a></li>
+                <li class="py-1 px-2 m-1 ml-6 list-item"><a href="#">Dummy </a></li>
+                <li class="py-1 px-2 m-1 ml-6 list-item"><a href="#">Dummy</a></li>
+                <li class="py-1 px-2 m-1 ml-6 list-item"><a href="#">Dummy</a></li>
+                <li class="py-1 px-2 m-1 ml-6 list-item"><a href="#">Dummy </a></li>
             </ul>
         </aside>
-        <main class="component-container">
-            <h1>Example heading</h1>
+        <main class="main-container m-3">
+            <section id="usage" class="usage p-2 m-auto">
+                <article>
+                    <p class="text-regular mt-3 mb-2 pb-2 border-b-1">
+                        <span class="invert text-regular font-bold"> Polaroid </span>
+                        is CSS component library for developing UIs in more faster and
+                        efficient manner.
+                    </p>
+                </article>
+
+                <article class="mt-5">
+                    <p class="text-regular">Installation</p>
+                    <p>
+                        Import the below link in your head section of html file or in CSS
+                        file.
+                    </p>
+
+                    <div class="code-snippet my-2">
+                        <iframe
+                            src="https://carbon.now.sh/embed?bg=rgba%28250%2C250%2C250%2C1%29&t=material&wt=none&l=auto&width=798&ds=false&dsyoff=20px&dsblur=68px&wc=true&wa=false&pv=0px&ph=0px&ln=false&fl=1&fm=Fira+Code&fs=15px&lh=150%25&si=false&es=2x&wm=false&code=%2509%253Clink%2520rel%253D%2522stylesheet%2522%2520href%253D%2522https%253A%252F%252Futilities91.netlify.app%252Fstyles.css%2522%252F%253E"
+                            style="
+									width: 790px;
+									height: 97px;
+									border: 0;
+									transform: scale(1);
+									overflow: auto;
+								" sandbox="allow-scripts allow-same-origin">
+                        </iframe>
+                    </div>
+                </article>
+                <article class="mt-5">
+                    <p class="font-bold">References</p>
+                    <ol class="ml-2">
+                        <li>Icons from font-awesome</li>
+                        <li>Images from google images and picsum.com</li>
+                    </ol>
+                    <p class="mt-4">Made by Rohan Mathur.</p>
+                </article>
+            </section>
+
+            <section id="avatar" class="avatar p-2 m-auto">
+
+            </section>
         </main>
     </div>
 </body>
