--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 </head>
 
 <body>
-    <nav class="navigation spacing flex-row items-center wrap py-2 px-8 sticky top-0 z-1 w-100">
+    <nav class="navigation spacing flex-row items-center wrap py-2 px-8 fixed top-0 z-10 w-100">
         <a href=" ../index.html">
             <h3>Polaroid</h3>
         </a>
@@ -39,17 +39,6 @@
                 </div>
             </div>
         </section>
-
-        <!-- <section id="installation" class="h-screen-80">
-            <h3>
-                Installation
-            </h3>
-            <iframe class="overflow-auto"
-                src="https://carbon.now.sh/embed?bg=rgba%28250%2C250%2C250%2C1%29&t=seti&wt=none&l=auto&width=768&ds=true&dsyoff=0px&dsblur=0px&wc=true&wa=false&pv=50px&ph=55px&ln=false&fl=1&fm=Cascadia+Code&fs=14.5px&lh=133%25&si=false&es=2x&wm=false&code=%253Clink%2520rel%253D%2522stylesheet%2522%2520href%253D%2522https%253A%252F%252Futilities91.netlify.app%252Fstyles.css%2522%253E"
-                style="width: 768px; height: 176px; border:0; transform: scale(1); overflow:hidden;"
-                sandbox="allow-scripts allow-same-origin">
-            </iframe>
-        </section> -->
     </main>
     </div>
 </body>
