feat: add responsiveness for sidebar

--- a/index.html
+++ b/index.html
@@ -15,43 +15,39 @@
 </head>
 
 <body>
-    <nav class="navigation spacing flex-row items-center wrap py-2 px-8 sticky top-0 z-1 w-100">
+    <nav class="navigation spacing flex-row items-center wrap py-2 px-6 fixed top-0 z-2 w-100">
         <a href=" ../index.html">
             <h3>Polaroid</h3>
         </a>
         <ul class="lists flex-row items-center font-bold">
-            <li class="mr-2"><a class="link" href="./documentation/documentation.html">Documentation</a></li>
-            <li class="mr-2"><a class="link" href="https://twitter.com/@rohanmathur91" target="_blank">Twitter</a></li>
+            <li class="ml-4">
+                <a href="https://twitter.com/@rohanmathur91" target="_blank"><i
+                        class="fa fa-github social-icons"></i></a>
+            </li>
+            <li class="ml-4">
+                <a href="https://twitter.com/@rohanmathur91" target="_blank"><i
+                        class="fa fa-twitter social-icons"></i></a>
+            </li>
+            <li class="ml-4">
+                <a href="https://twitter.com/@rohanmathur91" target="_blank"><i
+                        class="fa fa-linkedin-square social-icons"></i></a>
+            </li>
         </ul>
     </nav>
 
-    <main class="home">
-        <section class="spacing flex-row flex-center h-screen-80 w-screen-100 m-auto">
-            <div class="text-center mx-6">
-                <h1 class="text-xlg mb-5 invert font-black">Polaroid</h1>
-                <h3>Build fast and elegant user interfaces.</h3>
-                <h3>Polaroid a component library for faster development.</h3>
-                <div class="mt-4 p-1">
-                    <a class="cta mt-1 py-1 px-2 mr-1 rounded-sm cta__primary"
-                        href="./documentation/documentation.html">Get started</a>
-                    <a class="cta mt-1 py-1 px-2 rounded-sm cta__secondary"
-                        href="https://github.com/rohanmathur91/css-component-library" target="_blank">Github</a>
-                </div>
+    <main class="home spacing flex-row flex-center w-screen-100 m-auto">
+        <div class="text-center mx-6">
+            <h1 class="text-xlg mb-5 invert font-black">Polaroid</h1>
+            <h3>Build fast and elegant user interfaces.</h3>
+            <h3>Polaroid a component library for faster development.</h3>
+            <div class="mt-4 p-1">
+                <a class="cta mt-1 py-1 px-2 mr-1 rounded-sm cta__primary" href="./documentation/documentation.html">Get
+                    started</a>
+                <a class="cta mt-1 py-1 px-2 rounded-sm cta__secondary"
+                    href="https://github.com/rohanmathur91/css-component-library" target="_blank">Github</a>
             </div>
-        </section>
-
-        <!-- <section id="installation" class="h-screen-80">
-            <h3>
-                Installation
-            </h3>
-            <iframe class="overflow-auto"
-                src="https://carbon.now.sh/embed?bg=rgba%28250%2C250%2C250%2C1%29&t=seti&wt=none&l=auto&width=768&ds=true&dsyoff=0px&dsblur=0px&wc=true&wa=false&pv=50px&ph=55px&ln=false&fl=1&fm=Cascadia+Code&fs=14.5px&lh=133%25&si=false&es=2x&wm=false&code=%253Clink%2520rel%253D%2522stylesheet%2522%2520href%253D%2522https%253A%252F%252Futilities91.netlify.app%252Fstyles.css%2522%253E"
-                style="width: 768px; height: 176px; border:0; transform: scale(1); overflow:hidden;"
-                sandbox="allow-scripts allow-same-origin">
-            </iframe>
-        </section> -->
+        </div>
     </main>
-    </div>
 </body>
 
 </html>
