fix: anchor tag fix for home page

--- a/pages/documentation.html
+++ b/pages/documentation.html
@@ -45,8 +45,8 @@
                 <li class="py-1 px-2 m-1 ml-4 list-item">
                     <a href="#usage">Get started!</a>
                 </li>
-                <li class="py-1 px-2 m-1 ml-4 list-item"><a href="#">Alert</a></li>
-                <li class="py-1 px-2 m-1 ml-4 list-item"><a href="#">Dummy</a></li>
+                <li class="py-1 px-2 m-1 ml-4 list-item"><a href="#avatar">Avatar</a></li>
+                <li class="py-1 px-2 m-1 ml-4 list-item"><a href="#badge">Badge</a></li>
                 <li class="py-1 px-2 m-1 ml-4 list-item"><a href="#">Dummy</a></li>
                 <li class="py-1 px-2 m-1 ml-4 list-item"><a href="#">Dummy</a></li>
                 <li class="py-1 px-2 m-1 ml-4 list-item"><a href="#">Dummy</a></li>
