--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <meta name="description" content="Polaroid a CSS component library for your awesome UI." />
 
     <!-- links -->
-    <link rel="stylesheet" href="/documentation/documentation.css" />
+    <link rel="stylesheet" href="/pages/documentation.css" />
     <title>⚒ Polaroid | Home</title>
 </head>
 
@@ -40,7 +40,7 @@
             <h3>Build fast and elegant user interfaces.</h3>
             <h3>Polaroid a component library for faster development.</h3>
             <div class="mt-4 p-1">
-                <a class="cta mt-1 py-1 px-2 mr-1 rounded-sm cta__primary" href="./documentation/documentation.html">Get
+                <a class="cta mt-1 py-1 px-2 mr-1 rounded-sm cta__primary" href="./pages/documentation.html">Get
                     started</a>
                 <a class="cta mt-1 py-1 px-2 rounded-sm cta__secondary"
                     href="https://github.com/rohanmathur91/css-component-library" target="_blank">Github</a>
