refactor: overflow refactor for code snippets

--- a/pages/documentation.html
+++ b/pages/documentation.html
@@ -133,7 +133,7 @@
 									height: 170px;
 									border: 0;
 									transform: scale(1);
-									overflow: hidden;
+									overflow: auto;
 								" sandbox="allow-scripts allow-same-origin">
                         </iframe>
                     </div>
@@ -165,7 +165,7 @@
 									height: 187px;
 									border: 0;
 									transform: scale(1);
-									overflow: hidden;
+									overflow: auto;
 								" sandbox="allow-scripts allow-same-origin">
                         </iframe>
                     </div>
@@ -218,7 +218,7 @@
 									height: 282px;
 									border: 0;
 									transform: scale(1);
-									overflow: hidden;
+									overflow: auto;
 								" sandbox="allow-scripts allow-same-origin">
                         </iframe>
                     </div>
@@ -250,7 +250,7 @@
 									height: 282px;
 									border: 0;
 									transform: scale(1);
-									overflow: hidden;
+									overflow: auto;
 								" sandbox="allow-scripts allow-same-origin">
                         </iframe>
                     </div>
@@ -299,7 +299,7 @@
 									height: 305px;
 									border: 0;
 									transform: scale(1);
-									overflow: hidden;
+									overflow: auto;
 								" sandbox="allow-scripts allow-same-origin">
                         </iframe>
                     </div>
