fix: horizontal card image

--- a/documentation/index.html
+++ b/documentation/index.html
@@ -68,7 +68,7 @@
                 <li class="py-1 px-2 m-1 ml-4 list-item"><a href="#">Dummy </a></li>
             </ul>
         </aside>
-        <main class="main-container flex-column items-center">
+        <main class="main-container flex-column p-1">
             <section id="usage" class="usage">
                 <article>
                     <p class="text-regular mt-3 mb-2 pb-2 border-b-1">
@@ -615,18 +615,18 @@
                     <!-- horizontal cards-->
                     <p class="mt-2">Horizontal cards.</p>
                     <div class="snippet rounded-sm p-3 flex-row items-start content-center my-1 border">
-                        <div class="card flex-row horizontal-card relative transition-2">
+                        <div class="card flex-row horizontal-card transition-2">
                             <div class="w-30">
-                                <img src="../assets/jacket.jpg" alt="avatar" class="w-100" />
+                                <img src="../assets/jacket.jpg" alt="avatar" class="w-100 h-100" />
                             </div>
                             <div class="flex-column content-space-between w-30 p-2 mt-1">
                                 <div>
                                     <p class="text-regular mb-1">Men premium jacket</p>
                                     <div class="mb-1">
                                         <span class="mr-2 text-lg font-bold">₹2000</span>
-                                        <span class="gray text-regular"><s>₹3000</s></span>
+                                        <span class="dark-gray text-regular"><s>₹3000</s></span>
                                     </div>
-                                    <p class="gray font-bold text-regular mb-1">50% off</p>
+                                    <p class="dark-gray font-bold text-regular mb-1">50% off</p>
                                 </div>
                                 <div>
                                     <button class="p-1 w-100 font-semibold items-end card-btn transition-2 mb-1">
