fix: file structure for documentation

--- a/documentation/index.html
+++ b/documentation/index.html
@@ -87,14 +87,9 @@
 
                     <div class="my-2 snippet">
                         <iframe
-                            src="https://carbon.now.sh/embed?bg=rgba%28250%2C250%2C250%2C1%29&t=material&wt=none&l=auto&width=860&ds=false&dsyoff=20px&dsblur=68px&wc=true&wa=false&pv=0px&ph=0px&ln=false&fl=1&fm=Fira+Code&fs=15px&lh=150%25&si=false&es=2x&wm=false&code=%2520%2520%2509%2509%253Clink%2520rel%253D%2522stylesheet%2522%2520href%253D%2522https%253A%252F%252Fpolaroid7.netlify.app%252Fpolaroid.css%2522%252F%253E%250A%2520%2520%2520%2520%2520%2520%2520%2520"
-                            style="
-									width: 860px;
-									height: 102px;
-									border: 0;
-									transform: scale(1);
-									overflow: hidden;
-								" sandbox="allow-scripts allow-same-origin">
+                            src="https://carbon.now.sh/embed?bg=rgba%28250%2C250%2C250%2C1%29&t=material&wt=none&l=htmlmixed&width=1013&ds=false&dsyoff=20px&dsblur=68px&wc=true&wa=false&pv=27px&ph=37px&ln=false&fl=1&fm=Fira+Code&fs=15px&lh=150%25&si=false&es=2x&wm=false&code=%2509%2509%2509%253Clink%2520rel%253D%2522stylesheet%2522%2520href%253D%2522https%253A%252F%252Fpolaroid7.netlify.app%252Fpolaroid.css%2522%252F%253E%250A"
+                            style="width: 100%; height: 156px; border:0; transform: scale(1); overflow:auto;"
+                            sandbox="allow-scripts allow-same-origin">
                         </iframe>
                     </div>
                 </article>
