refactor: refactor components

--- a/documentation/index.html
+++ b/documentation/index.html
@@ -314,36 +314,36 @@
                         Badges on avatars, for badge to be at bottom right just add
                         <code>bottom-badge</code> in class.
                     </p>
-                    <div class="snippet rounded-sm p-3 text-center my-2 border">
-                        <span class="avatar-badge mr-4">
+                    <div class="snippet rounded-sm p-3 flex-row content-center wrap my-2 border">
+                        <div class="avatar-badge mr-4">
                             <img class="avatar rounded-full" src="../assets/avatar.png" alt="avatar" />
                             <span class="badge badge-sm blue-badge border-white"></span>
-                        </span>
+                        </div>
 
-                        <span class="avatar-badge mr-4">
+                        <div class="avatar-badge mr-4">
                             <img class="avatar rounded-full" src="../assets/avatar.png" alt="avatar" />
                             <span class="badge badge-sm green-badge border-white"></span>
-                        </span>
+                        </div>
 
-                        <span class="avatar-badge mr-4">
+                        <div class="avatar-badge mr-4">
                             <img class="avatar rounded-full" src="../assets/avatar.png" alt="avatar" />
                             <span class="badge badge-sm red-badge border-white"></span>
-                        </span>
+                        </div>
 
-                        <span class="avatar-badge mr-4">
+                        <div class="avatar-badge mr-4">
                             <img class="avatar rounded-full" src="../assets/avatar.png" alt="avatar" />
                             <span class="badge badge-sm blue-badge bottom-badge border-white"></span>
-                        </span>
+                        </div>
 
-                        <span class="avatar-badge mr-4">
+                        <div class="avatar-badge mr-4">
                             <img class="avatar rounded-full" src="../assets/avatar.png" alt="avatar" />
                             <span class="badge badge-sm green-badge bottom-badge border-white"></span>
-                        </span>
+                        </div>
 
-                        <span class="avatar-badge mr-4">
+                        <div class="avatar-badge mr-4">
                             <img class="avatar rounded-full" src="../assets/avatar.png" alt="avatar" />
                             <span class="badge badge-sm red-badge bottom-badge border-white"></span>
-                        </span>
+                        </div>
                     </div>
 
                     <div class="my-3 snippet">
@@ -499,8 +499,7 @@
                     <div class="snippet rounded-sm p-3 flex-row flex-center wrap my-1 border">
                         <!-- card with badge -->
                         <div class="card vertical-card flex-column relative transition-2 mr-1 my-2">
-                            <span
-                                class="card-badge text-base font-semibold absolute top-1 right-1 rounded-sm">New</span>
+                            <span class="card-badge text-base font-semibold absolute top-1 left-1 rounded-sm">New</span>
                             <div>
                                 <img src="../assets/jacket.jpg" alt="avatar" />
                             </div>
