--- a/documentation/index.html
+++ b/documentation/index.html
@@ -21,7 +21,7 @@
                 <h3>Polaroid</h3>
             </a>
             <div class="menu hide"><i class="fa fa-bars"></i></div>
-            <ul class="lists flex-row items-center font-bold">
+            <ul class="ml-auto flex-row items-center font-bold">
                 <li class="ml-4">
                     <a href="https://github.com/rohanmathur91" target="_blank"><i
                             class="fa fa-github social-icons"></i></a>
